<resources>
    <string name="app_name">FIMP</string>

    <!-- Toolbar String Values -->
    <string name="settings_tool">Settings</string>
    <string name="options_tools">Contact Us</string>

    <!-- Main Activity String values -->
    <string name="add_arm">Add an arm</string>

    <!-- Fragment string values -->
    <string name="cam_ip">Enter the IP address of your camera</string>
    <string name="arm_nm">Pick a name you would like to call your arm</string>
    <string name="arm_cl">Pick a color to represent your arm</string>

    <!-- String values for action bars -->
    <string name="profile">F.I.M.P.</string>

    <!-- String values for Register Screen -->
    <string name="fname">Full Name</string>
    <string name="uname">User Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="cnfrmpass">Confirm Password</string>
    <string name="register">Register User</string>
    <string name="logAct">Already a user? Login Here!</string>
    <string name="noMatch">Passwords do not match, please try again.</string>
    <string name="error">An error occured! Please check your fields again.</string>
    <string name="welcome">Bio</string>
    <string name="userBio"></string>

    <string name="emptStr"></string>


    <!--String values for Login -->
    <string name="login">Login</string>
    <string name="regAct">Not a user? Register Here!</string>
    <string name="noExist">Sorry, user does not seem to exist in our entries!</string>

    <!-- Strings for Joystick -->
    <string name="claw_open">Claw Open</string>
    <string name="claw_close">Claw Close</string>
    <string name="servor1">Servor1: </string>
    <string name="servor2">Servor2: </string>
    <string name="servor3">Servor3: </string>
    <string name="servor4">Servor4: </string>


</resources>
